// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberElement renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
  will-change: transform;
}

.c1 {
  background-color: #abacae;
  background-image: linear-gradient( to bottom, #d4d4d4, #abacae );
  box-shadow: 0 0 0 1px #7e8087 inset, 0 0 0 2px #d4d4d4 inset;
  color: #555761;
  text-shadow: 0 1px 0 #fafafa;
  font-size: 0;
  font-weight: bold;
  text-align: center;
  padding-top: 0.2em;
}

.c2 {
  display: block;
  height: 100%;
  overflow: hidden;
}

@media (prefers-reduced-motion:no-preference) {
  .c0:hover {
    -webkit-transform: translateY(-1rem);
    -ms-transform: translateY(-1rem);
    transform: translateY(-1rem);
  }

  .c0:hover::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: -1rem;
    z-index: -1;
  }
}

<div
    class="c0 c1"
    data-value="4"
    style="font-size: 0px; height: 80%;"
  >
    <span
      class="c2"
    >
      4
    </span>
  </div>
</DocumentFragment>
`;

exports[`NumberElement uses the specified color 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
  will-change: transform;
}

.c1 {
  background-color: #3689e6;
  background-image: linear-gradient( to bottom, #64baff, #3689e6 );
  box-shadow: 0 0 0 1px #0d52bf inset, 0 0 0 2px #64baff inset;
  color: #002e99;
  text-shadow: 0 1px 0 #8cd5ff;
  font-size: 0;
  font-weight: bold;
  text-align: center;
  padding-top: 0.2em;
}

.c2 {
  display: block;
  height: 100%;
  overflow: hidden;
}

@media (prefers-reduced-motion:no-preference) {
  .c0:hover {
    -webkit-transform: translateY(-1rem);
    -ms-transform: translateY(-1rem);
    transform: translateY(-1rem);
  }

  .c0:hover::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: -1rem;
    z-index: -1;
  }
}

<div
    class="c0 c1"
    data-value="4"
    style="font-size: 0px; height: 80%;"
  >
    <span
      class="c2"
    >
      4
    </span>
  </div>
</DocumentFragment>
`;
